--- a/config/zones/AU-SA.yaml
+++ b/config/zones/AU-SA.yaml
@@ -81,6 +81,19 @@ country_name: Australia
 currency: AUD
 delays:
   production: 96
+emissionFactors:
+  direct:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 115.71
+  lifecycle:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 161.96
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
