--- a/config/zones/AU-WA.yaml
+++ b/config/zones/AU-WA.yaml
@@ -71,6 +71,19 @@ delays:
   production: 96
 disclaimer: Western Australia's power grid is not connected to the (Australian) National
   Electricity Market or the Northern Territory grid.
+emissionFactors:
+  direct:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 303.78
+  lifecycle:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 368.61
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
