--- a/config/zones/GB.yaml
+++ b/config/zones/GB.yaml
@@ -194,12 +194,22 @@ currency: GBP
 delays:
   production: 5
 emissionFactors:
-  direct: {}
+  direct:
+    hydro discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 114.28
   lifecycle:
     hydro:
       datetime: '2020-01-01'
       source: UNECE 2022
       value: 10.7
+    hydro discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 173.62
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
