--- a/config/zones/KR.yaml
+++ b/config/zones/KR.yaml
@@ -192,8 +192,18 @@ currency: KRW
 delays:
   production: 5
 emissionFactors:
-  direct: {}
+  direct:
+    hydro discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 351.5
   lifecycle:
+    hydro discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 412.05
     unknown:
       _comment: 'Source: 2020 annual electricity production by IEA'
       _url: https://www.iea.org/fuels-and-technologies/electricity
