--- a/config/zones/RS.yaml
+++ b/config/zones/RS.yaml
@@ -156,12 +156,22 @@ currency: EUR
 delays:
   production: 9
 emissionFactors:
-  direct: {}
+  direct:
+    hydro discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 453.93
   lifecycle:
     hydro:
       datetime: '2020-01-01'
       source: UNECE 2022
       value: 10.7
+    hydro discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 501.46
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
