--- a/config/zones/AU-WA-RI.yaml
+++ b/config/zones/AU-WA-RI.yaml
@@ -23,6 +23,19 @@ contributors:
 country: AU
 country_name: Australia
 currency: AUD
+emissionFactors:
+  direct:
+    battery discharge:
+    - _comment: used storage values equal to zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 322.04
+  lifecycle:
+    battery discharge:
+    - _comment: used storage values equal to zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 519.91
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2021 average
