--- a/config/zones/CA.yaml
+++ b/config/zones/CA.yaml
@@ -1,169 +1,182 @@
 capacity:
   biomass:
-    - datetime: '2017-01-01'
-      source: Ember, Yearly electricity data
-      value: 2740.0
-    - datetime: '2018-01-01'
-      source: Ember, Yearly electricity data
-      value: 2750.0
-    - datetime: '2019-01-01'
-      source: Ember, Yearly electricity data
-      value: 2650.0
-    - datetime: '2022-01-01'
-      source: Ember, Yearly electricity data
-      value: 2660.0
+  - datetime: '2017-01-01'
+    source: Ember, Yearly electricity data
+    value: 2740.0
+  - datetime: '2018-01-01'
+    source: Ember, Yearly electricity data
+    value: 2750.0
+  - datetime: '2019-01-01'
+    source: Ember, Yearly electricity data
+    value: 2650.0
+  - datetime: '2022-01-01'
+    source: Ember, Yearly electricity data
+    value: 2660.0
   coal:
-    - datetime: '2017-01-01'
-      source: Ember, Yearly electricity data
-      value: 9980.0
-    - datetime: '2018-01-01'
-      source: Ember, Yearly electricity data
-      value: 9320.0
-    - datetime: '2019-01-01'
-      source: Ember, Yearly electricity data
-      value: 9170.0
-    - datetime: '2020-01-01'
-      source: Ember, Yearly electricity data
-      value: 8790.0
-    - datetime: '2021-01-01'
-      source: Ember, Yearly electricity data
-      value: 5310.0
-    - datetime: '2022-01-01'
-      source: Ember, Yearly electricity data
-      value: 4880.0
-    - datetime: '2023-01-01'
-      source: Ember, Yearly electricity data
-      value: 4260.0
-    - datetime: '2024-01-01'
-      source: Ember, Yearly electricity data
-      value: 3380.0
+  - datetime: '2017-01-01'
+    source: Ember, Yearly electricity data
+    value: 9980.0
+  - datetime: '2018-01-01'
+    source: Ember, Yearly electricity data
+    value: 9320.0
+  - datetime: '2019-01-01'
+    source: Ember, Yearly electricity data
+    value: 9170.0
+  - datetime: '2020-01-01'
+    source: Ember, Yearly electricity data
+    value: 8790.0
+  - datetime: '2021-01-01'
+    source: Ember, Yearly electricity data
+    value: 5310.0
+  - datetime: '2022-01-01'
+    source: Ember, Yearly electricity data
+    value: 4880.0
+  - datetime: '2023-01-01'
+    source: Ember, Yearly electricity data
+    value: 4260.0
+  - datetime: '2024-01-01'
+    source: Ember, Yearly electricity data
+    value: 3380.0
   gas:
-    - datetime: '2017-01-01'
-      source: Ember, Yearly electricity data
-      value: 18780.0
-    - datetime: '2019-01-01'
-      source: Ember, Yearly electricity data
-      value: 19130.0
-    - datetime: '2020-01-01'
-      source: Ember, Yearly electricity data
-      value: 20240.0
-    - datetime: '2021-01-01'
-      source: Ember, Yearly electricity data
-      value: 22950.0
-    - datetime: '2022-01-01'
-      source: Ember, Yearly electricity data
-      value: 23060.0
-    - datetime: '2023-01-01'
-      source: Ember, Yearly electricity data
-      value: 23620.0
-    - datetime: '2024-01-01'
-      source: Ember, Yearly electricity data
-      value: 25640.0
+  - datetime: '2017-01-01'
+    source: Ember, Yearly electricity data
+    value: 18780.0
+  - datetime: '2019-01-01'
+    source: Ember, Yearly electricity data
+    value: 19130.0
+  - datetime: '2020-01-01'
+    source: Ember, Yearly electricity data
+    value: 20240.0
+  - datetime: '2021-01-01'
+    source: Ember, Yearly electricity data
+    value: 22950.0
+  - datetime: '2022-01-01'
+    source: Ember, Yearly electricity data
+    value: 23060.0
+  - datetime: '2023-01-01'
+    source: Ember, Yearly electricity data
+    value: 23620.0
+  - datetime: '2024-01-01'
+    source: Ember, Yearly electricity data
+    value: 25640.0
   hydro:
-    - datetime: '2017-01-01'
-      source: Ember, Yearly electricity data
-      value: 80660.0
-    - datetime: '2018-01-01'
-      source: Ember, Yearly electricity data
-      value: 81400.0
-    - datetime: '2020-01-01'
-      source: Ember, Yearly electricity data
-      value: 81210.0
-    - datetime: '2021-01-01'
-      source: Ember, Yearly electricity data
-      value: 82130.0
-    - datetime: '2022-01-01'
-      source: Ember, Yearly electricity data
-      value: 83140.0
-    - datetime: '2023-01-01'
-      source: Ember, Yearly electricity data
-      value: 83280.0
+  - datetime: '2017-01-01'
+    source: Ember, Yearly electricity data
+    value: 80660.0
+  - datetime: '2018-01-01'
+    source: Ember, Yearly electricity data
+    value: 81400.0
+  - datetime: '2020-01-01'
+    source: Ember, Yearly electricity data
+    value: 81210.0
+  - datetime: '2021-01-01'
+    source: Ember, Yearly electricity data
+    value: 82130.0
+  - datetime: '2022-01-01'
+    source: Ember, Yearly electricity data
+    value: 83140.0
+  - datetime: '2023-01-01'
+    source: Ember, Yearly electricity data
+    value: 83280.0
   nuclear:
-    - datetime: '2017-01-01'
-      source: Ember, Yearly electricity data
-      value: 14030.0
-    - datetime: '2018-01-01'
-      source: Ember, Yearly electricity data
-      value: 13340.0
-    - datetime: '2020-01-01'
-      source: Ember, Yearly electricity data
-      value: 12510.0
-    - datetime: '2022-01-01'
-      source: Ember, Yearly electricity data
-      value: 11580.0
+  - datetime: '2017-01-01'
+    source: Ember, Yearly electricity data
+    value: 14030.0
+  - datetime: '2018-01-01'
+    source: Ember, Yearly electricity data
+    value: 13340.0
+  - datetime: '2020-01-01'
+    source: Ember, Yearly electricity data
+    value: 12510.0
+  - datetime: '2022-01-01'
+    source: Ember, Yearly electricity data
+    value: 11580.0
   solar:
-    - datetime: '2017-01-01'
-      source: Ember, Yearly electricity data
-      value: 3420.0
-    - datetime: '2018-01-01'
-      source: Ember, Yearly electricity data
-      value: 3720.0
-    - datetime: '2019-01-01'
-      source: Ember, Yearly electricity data
-      value: 4010.0
-    - datetime: '2020-01-01'
-      source: Ember, Yearly electricity data
-      value: 4380.0
-    - datetime: '2021-01-01'
-      source: Ember, Yearly electricity data
-      value: 5260.0
-    - datetime: '2022-01-01'
-      source: Ember, Yearly electricity data
-      value: 5440.0
-    - datetime: '2023-01-01'
-      source: Ember, Yearly electricity data
-      value: 5880.0
-    - datetime: '2024-01-01'
-      source: Ember, Yearly electricity data
-      value: 6110.0
+  - datetime: '2017-01-01'
+    source: Ember, Yearly electricity data
+    value: 3420.0
+  - datetime: '2018-01-01'
+    source: Ember, Yearly electricity data
+    value: 3720.0
+  - datetime: '2019-01-01'
+    source: Ember, Yearly electricity data
+    value: 4010.0
+  - datetime: '2020-01-01'
+    source: Ember, Yearly electricity data
+    value: 4380.0
+  - datetime: '2021-01-01'
+    source: Ember, Yearly electricity data
+    value: 5260.0
+  - datetime: '2022-01-01'
+    source: Ember, Yearly electricity data
+    value: 5440.0
+  - datetime: '2023-01-01'
+    source: Ember, Yearly electricity data
+    value: 5880.0
+  - datetime: '2024-01-01'
+    source: Ember, Yearly electricity data
+    value: 6110.0
   unknown:
-    - datetime: '2017-01-01'
-      source: Ember, Yearly electricity data
-      value: 2280.0
+  - datetime: '2017-01-01'
+    source: Ember, Yearly electricity data
+    value: 2280.0
   wind:
-    - datetime: '2017-01-01'
-      source: Ember, Yearly electricity data
-      value: 12250.0
-    - datetime: '2018-01-01'
-      source: Ember, Yearly electricity data
-      value: 12820.0
-    - datetime: '2019-01-01'
-      source: Ember, Yearly electricity data
-      value: 13220.0
-    - datetime: '2020-01-01'
-      source: Ember, Yearly electricity data
-      value: 13530.0
-    - datetime: '2021-01-01'
-      source: Ember, Yearly electricity data
-      value: 13720.0
-    - datetime: '2022-01-01'
-      source: Ember, Yearly electricity data
-      value: 15080.0
-    - datetime: '2023-01-01'
-      source: Ember, Yearly electricity data
-      value: 16990.0
-    - datetime: '2024-01-01'
-      source: Ember, Yearly electricity data
-      value: 18380.0
+  - datetime: '2017-01-01'
+    source: Ember, Yearly electricity data
+    value: 12250.0
+  - datetime: '2018-01-01'
+    source: Ember, Yearly electricity data
+    value: 12820.0
+  - datetime: '2019-01-01'
+    source: Ember, Yearly electricity data
+    value: 13220.0
+  - datetime: '2020-01-01'
+    source: Ember, Yearly electricity data
+    value: 13530.0
+  - datetime: '2021-01-01'
+    source: Ember, Yearly electricity data
+    value: 13720.0
+  - datetime: '2022-01-01'
+    source: Ember, Yearly electricity data
+    value: 15080.0
+  - datetime: '2023-01-01'
+    source: Ember, Yearly electricity data
+    value: 16990.0
+  - datetime: '2024-01-01'
+    source: Ember, Yearly electricity data
+    value: 18380.0
 country: CA
+country_name: Canada
+currency: CAD
+emissionFactors:
+  direct:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 89.07
+  lifecycle:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 134.78
 parsers:
   productionCapacity: EMBER.fetch_production_capacity
 region: Americas
 subZoneNames:
-  - CA-AB
-  - CA-BC
-  - CA-MB
-  - CA-NB
-  - CA-NL
-  - CA-NS
-  - CA-NT
-  - CA-NU
-  - CA-ON
-  - CA-PE
-  - CA-QC
-  - CA-SK
-  - CA-YT
+- CA-AB
+- CA-BC
+- CA-MB
+- CA-NB
+- CA-NL
+- CA-NS
+- CA-NT
+- CA-NU
+- CA-ON
+- CA-PE
+- CA-QC
+- CA-SK
+- CA-YT
 timezone: America/Toronto
 zone_name: Canada
-country_name: Canada
-currency: CAD
