--- a/config/zones/ES-CE.yaml
+++ b/config/zones/ES-CE.yaml
@@ -18,7 +18,18 @@ country: ES
 country_name: Spain
 currency: EUR
 emissionFactors:
-  lifecycle: {}
+  direct:
+    battery discharge:
+    - _comment: used storage values equal to zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 405.82
+  lifecycle:
+    battery discharge:
+    - _comment: used storage values equal to zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 649.2
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2022 average
