--- a/config/zones/ES-ML.yaml
+++ b/config/zones/ES-ML.yaml
@@ -30,7 +30,18 @@ country: ES
 country_name: Spain
 currency: EUR
 emissionFactors:
-  lifecycle: {}
+  direct:
+    battery discharge:
+    - _comment: used storage values equal to zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 376.11
+  lifecycle:
+    battery discharge:
+    - _comment: used storage values equal to zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 618.92
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2022 average
