--- a/config/zones/US-CAL-CISO.yaml
+++ b/config/zones/US-CAL-CISO.yaml
@@ -1010,6 +1010,11 @@ delays:
   production: 5
 emissionFactors:
   direct:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 129.21
     biomass:
     - datetime: '2020-01-01'
       source: BEIS 2021
@@ -1062,6 +1067,11 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: eGrid 2023
       value: 38.89697026267566
+    hydro discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 75.64
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -1076,6 +1086,11 @@ emissionFactors:
       source: eGrid 2023
       value: 945.4848707544354
   lifecycle:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 185.27
     biomass:
     - _comment: Mean of all US zones
       datetime: '2020-01-01'
@@ -1132,6 +1147,11 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: eGrid 2023; IPCC 2014
       value: 76.89697026267567
+    hydro discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 119.73
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
