--- a/config/zones/US-CAL-IID.yaml
+++ b/config/zones/US-CAL-IID.yaml
@@ -199,6 +199,11 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: eGrid 2023
       value: 33.30793611464112
+    hydro discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 292.25
     oil:
     - _comment: Mean of all US zones
       datetime: '2020-01-01'
@@ -277,6 +282,11 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: eGrid 2023; IPCC 2014
       value: 71.30793611464112
+    hydro discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 368.76
     oil:
     - _comment: Mean of all US zones
       datetime: '2020-01-01'
