--- a/config/zones/US-SW-SRP.yaml
+++ b/config/zones/US-SW-SRP.yaml
@@ -167,6 +167,11 @@ disclaimer: This zone includes all electricity production from the generation-on
   Company, LLC - HGBA. Read more on the wiki page.
 emissionFactors:
   direct:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 230.77
     biomass:
     - datetime: '2020-01-01'
       source: BEIS 2021
@@ -223,6 +228,11 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023
       value: 28.739435464835893
+    hydro discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 222.23
     oil:
     - _comment: Mean of all US zones
       datetime: '2020-01-01'
@@ -241,6 +251,11 @@ emissionFactors:
       source: eGrid 2023
       value: 692.2365799135232
   lifecycle:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 281.29
     biomass:
     - _comment: Mean of all US zones
       datetime: '2020-01-01'
@@ -301,6 +316,11 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023; IPCC 2014
       value: 66.73943546483589
+    hydro discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 273.76
     oil:
     - _comment: Mean of all US zones
       datetime: '2020-01-01'
